# woobuddy

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Modelfile-gemma4-woo  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  security.py
backend/app/api/: analyze.py  custom_terms.py  detections.py  documents.py  dossiers.py  export.py  leads.py  officials.py  page_reviews.py  reference_names.py  schemas.py
backend/app/data/: functietitels_ambtenaar.txt  functietitels_publiek.txt  gemeenten.csv  medewerkers_gemeenten.csv
backend/app/db/: session.py
backend/app/llm/: README.md  __init__.py  anthropic.py  ollama.py  prompts.py  provider.py
backend/app/middleware/: request_id.py
backend/app/models/: schemas.py
backend/app/services/: custom_term_matcher.py  environmental_classifier.py  export_engine.py  llm_engine.py  motivation.py  name_engine.py  ner_engine.py  pdf_accessibility.py  pdf_engine.py  (+10 more)
backend/tests/: conftest.py  test_analyze_api.py  test_custom_term_matcher.py  test_custom_terms_api.py  test_detections_api.py  test_export_api.py  test_fixture_regression.py  test_leads_api.py  test_llm_engine.py  test_llm_verification.py  test_name_engine.py  test_ner_engine.py  test_pdf_accessibility.py  test_pdf_engine.py  test_pipeline_engine.py  test_reference_names.py  test_role_engine.py  test_split_merge.py  test_structure_engine.py  test_whitelist_engine.py
(+377 files in other folders)
