[project]
name = "woobuddy-backend"
version = "0.0.1"
description = "WOO Buddy — API for Dutch Woo document redaction"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # PDF processing
    "pymupdf>=1.25.0",
    # Dutch NER / de-identification
    "deduce>=3.0.0",
    # HTTP client (used by the Brevo leads integration)
    "httpx>=0.28.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Utilities
    "python-multipart>=0.0.20",
    # Structured logging
    "structlog>=24.4.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
ocr = [
    "pytesseract>=0.3.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["B008"]  # Depends() in FastAPI defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
